# timezone-tracker

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md  default-config.toml
.github/workflows/: ci.yml  lint.yml
migrations/2021-07-05-085228_timezones/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  terminal.rs  ui.rs
src/handlers/: app.rs  config.rs  database.rs  event.rs  mod.rs  storage.rs
src/utils/: app.rs  dates.rs  event.rs  mod.rs  pathing.rs  styles.rs  text.rs  timezones.rs
