[package]
name = "timezone-tracker"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
description = "Converting/tracking timezones of others relative to your local time."
documentation = "https://github.com/Xithrius/timezone-tracker"
homepage = "https://github.com/Xithrius/timezone-tracker"
repository = "https://github.com/Xithrius/timezone-tracker"
license = "MIT OR Apache-2.0"
keywords = ["tui", "timezones"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.25.0"
tui = { version = "0.19.0", default-features = false, features = [ "crossterm" ] }
serde = { version = "1.0.144", features = [ "derive" ] }
tokio = { version = "1.21.1", features = [ "full" ] }
regex = "1.6.0"
unicode-width = "0.1.9"
unicode-segmentation = "1.9.0"
chrono = "0.4.22"
toml = "0.5.9"
rustyline = "10.0.0"
color-eyre = "0.6.2"
json = "0.12.4"
serde_json = "1.0.85"

[[bin]]
bench = false
path = "src/main.rs"
name = "tzt"

[profile.dev]
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
debug = 1
incremental = true
