[package]
name = "timezone-tracker"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "Converting/tracking timezones of others relative to your local time."
documentation = "https://github.com/Xithrius/timezone-tracker"
homepage = "https://github.com/Xithrius/timezone-tracker"
repository = "https://github.com/Xithrius/timezone-tracker"
license = "MIT OR Apache-2.0"
keywords = ["tui", "timezones"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.20.1", default-features = false, features = [ "crossterm", "serde" ] }
serde = { version = "1.0.149", features = [ "derive" ] }
tokio = { version = "1.23.0", features = [ "full" ] }
regex = "1.7.0"
unicode-width = "0.1.10"
unicode-segmentation = "1.10.0"
chrono = "0.4.23"
toml = "0.7.6"
rustyline = "10.1.1"
color-eyre = "0.6.2"
serde_json = "1.0.89"

[[bin]]
bench = false
path = "src/main.rs"
name = "tzt"

[profile.dev]
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
debug = 1
incremental = true
