[package]
name = "timezone-tracker"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "Converting/tracking timezones of others relative to your local time."
documentation = "https://github.com/Xithrius/timezone-tracker"
homepage = "https://github.com/Xithrius/timezone-tracker"
repository = "https://github.com/Xithrius/timezone-tracker"
license = "MIT OR Apache-2.0"
keywords = ["tui", "timezones"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", version = "0.23.0", default-features = false, features = [ "crossterm", "serde" ] }
serde = { version = "1.0.188", features = [ "derive" ] }
tokio = { version = "1.32.0", features = [ "full" ] }
regex = "1.9.5"
unicode-width = "0.1.10"
unicode-segmentation = "1.10.1"
chrono = "0.4.31"
toml = "0.7.8"
rustyline = "10.1.1"
color-eyre = "0.6.2"
serde_json = "1.0.105"

[[bin]]
bench = false
path = "src/main.rs"
name = "tzt"

[profile.dev]
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
debug = 1
incremental = true
